<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_nombre_completo"
        android:layout_marginTop="25dp"
        android:inputType="textPersonName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_rut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/ingrese_rut"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/ingrese_direccion"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_caracteristica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Ingrese Comuna"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ingrese_mail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ingrese_pass" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/acepto_los_terminos_y_condiciones"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_crear_usuario1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#689F38"
        android:text="@string/crear_user" />



</LinearLayout>

