<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_1"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/ingrese_email"
        android:inputType="textPersonName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ingrese_password"
        android:layout_marginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_cerrar_sesion"
        android:layout_marginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#689F38"
        android:text="@string/ingresar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_crear_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#689F38"
        android:text="@string/crear_usuario" />




</LinearLayout>