<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_solicitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:hint="@string/que_desea_solicitar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_cantidad_a_pedir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        android:hint="¿Cantidad a pedir?" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_monto_en_pesos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="¿Monto en pesos a invertir?"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_detalles_productos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        android:hint="@string/caracteristicas_detalladas_del_producto" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        android:hint="@string/link_referencial_con_imagenes_del_producto" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ingresar_solicitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#689F38"
        android:text="@string/ingresar_solicitud" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#689F38"
        android:text="@string/cancelar" />

</LinearLayout>