<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_1"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_catalogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="#689F38"
        android:text="@string/revise_nuestros_pedidos_recientes" />

    <Button
        android:id="@+id/btn_pedido_personalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#689F38"
        android:text="@string/realiza_tu_pedido_personalizado" />

    <Button
        android:id="@+id/btn_volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="#689F38"
        android:text="@string/volver"/>


</LinearLayout>